[gd_scene load_steps=29 format=3 uid="uid://bfusfey4wnl1e"]

[ext_resource type="Script" path="res://Scenes/Player/player.gd" id="1_gxm3i"]
[ext_resource type="Texture2D" uid="uid://d2tecocki86wv" path="res://Resources/Graphics/Spritesheets/Player/idle.png" id="2_40661"]
[ext_resource type="Texture2D" uid="uid://b5woimrh1xofx" path="res://Resources/Graphics/Spritesheets/Projectiles/white.png" id="2_vvstu"]
[ext_resource type="Texture2D" uid="uid://d3qo0rkh1ghhu" path="res://Resources/Graphics/Spritesheets/Player/fall.png" id="2_ybwse"]
[ext_resource type="Texture2D" uid="uid://c03rx4ojeq1km" path="res://Resources/Graphics/Spritesheets/Player/run.png" id="3_0yjxx"]
[ext_resource type="Texture2D" uid="uid://c0i0triyxopid" path="res://Resources/Graphics/Spritesheets/Player/jump.png" id="4_wmiam"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_1hfqt"]
emission_shape = 1
emission_sphere_radius = 1.0
particle_flag_disable_z = true
direction = Vector3(-1, 0, 0)
spread = 30.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 100.0
initial_velocity_max = 300.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 0.05
scale_max = 0.1

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wunpw"]
radius = 4.0
height = 16.0

[sub_resource type="AtlasTexture" id="AtlasTexture_dyw6e"]
atlas = ExtResource("2_ybwse")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_08klb"]
atlas = ExtResource("2_ybwse")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cqh4h"]
atlas = ExtResource("2_40661")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jdkxu"]
atlas = ExtResource("2_40661")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x6cmg"]
atlas = ExtResource("2_40661")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2lgw5"]
atlas = ExtResource("2_40661")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tgr1d"]
atlas = ExtResource("2_40661")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ge5xd"]
atlas = ExtResource("2_40661")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g3olx"]
atlas = ExtResource("4_wmiam")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ln6wm"]
atlas = ExtResource("4_wmiam")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3xpih"]
atlas = ExtResource("4_wmiam")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qd5cg"]
atlas = ExtResource("3_0yjxx")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ma7rh"]
atlas = ExtResource("3_0yjxx")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oupig"]
atlas = ExtResource("3_0yjxx")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bc5jo"]
atlas = ExtResource("3_0yjxx")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4dsg3"]
atlas = ExtResource("3_0yjxx")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_13uej"]
atlas = ExtResource("3_0yjxx")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqv7t"]
atlas = ExtResource("3_0yjxx")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vmbb"]
atlas = ExtResource("3_0yjxx")
region = Rect2(224, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_n5vq0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dyw6e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_08klb")
}],
"loop": false,
"name": &"fall",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cqh4h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdkxu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x6cmg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2lgw5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tgr1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ge5xd")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g3olx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ln6wm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3xpih")
}],
"loop": false,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qd5cg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ma7rh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oupig")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bc5jo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4dsg3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_13uej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gqv7t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6vmbb")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_gxm3i")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(-12, -2.5)
emitting = false
amount = 10
process_material = SubResource("ParticleProcessMaterial_1hfqt")
texture = ExtResource("2_vvstu")
lifetime = 0.05
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_wunpw")

[node name="Animations" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_n5vq0")
animation = &"idle"
autoplay = "idle"

[node name="BulletStartPositions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="BulletStartPositions"]
position = Vector2(-12, -3)

[node name="Marker2D2" type="Marker2D" parent="BulletStartPositions"]
position = Vector2(-12, -2)

[node name="BulletTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="BulletTimer" to="." method="_on_bullet_timer_timeout"]
